fixed error with status page related to SOC and cellvoltagediff

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       </div>
       <div class="metric-box">
         <div class="metric-label">State of Charge</div>
-        <div class="metric-value" id="soc">-- %</div>
+        <div class="metric-value" id="stateOfCharge">-- %</div>
       </div>
       <div class="metric-box">
         <div class="metric-label">Pack Voltage</div>
